--- a/actions/Dockerfile
+++ b/actions/Dockerfile
@@ -1,5 +1,4 @@
 FROM rasa/rasa-sdk:1.4.0
 
-COPY . /app
-WORKDIR /app
-RUN pip install --no-cache-dir -r /app/requirements.txt
+COPY . /app/actions
+RUN pip install --no-cache-dir -r /app/actions/requirements.txt
