--- a/config.yml
+++ b/config.yml
@@ -1,23 +1,17 @@
-# Configuration for Rasa NLU.
-# https://rasa.com/docs/rasa/nlu/components/
 language: zh
-
 pipeline:
-- name: "tokenizer_jieba"
-- name: "RegexFeaturizer"
-- name: "CRFEntityExtractor"
-- name: "EntitySynonymMapper"
-- name: "CountVectorsFeaturizer"
-- name: "CountVectorsFeaturizer"
-  analyzer: "char_wb"
+- name: tokenizer_jieba
+- name: RegexFeaturizer
+- name: CRFEntityExtractor
+- name: EntitySynonymMapper
+- name: CountVectorsFeaturizer
+- name: CountVectorsFeaturizer
+  analyzer: char_wb
   min_ngram: 1
   max_ngram: 4
-- name: "EmbeddingIntentClassifier"
-
-# Configuration for Rasa Core.
-# https://rasa.com/docs/rasa/core/policies/
+- name: EmbeddingIntentClassifier
 policies:
-  - name: MemoizationPolicy
-  - name: KerasPolicy
-  - name: MappingPolicy
-  - name: FormPolicy
+- name: MemoizationPolicy
+- name: KerasPolicy
+- name: MappingPolicy
+- name: FormPolicy
